--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,3 +3,9 @@ a24embertestlib:
     image: a24embertestlib
     dockerfile_path: Dockerfile
     encrypted_args_file: ci/build_args.encrypted
+
+a24Check:
+  build:
+    image: a24-check
+    dockerfile_path: Dockerfile.check
+  cached: true
