--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "test:all": "ember try:each"
     },
     "dependencies": {
-        "ember-cli-babel": "^6.6.0",
+        "ember-cli-babel": "^7.1.2",
         "ember-cli-sass": "^7.1.7",
         "ember-responsive": "^2.0.8"
     },
@@ -54,7 +54,7 @@
         "pretty": "^2.0.0"
     },
     "engines": {
-        "node": "^4.5 || 6.* || >= 7.*"
+        "node": "6.* || 8.* || >= 10.*"
     },
     "ember-addon": {
         "configPath": "tests/dummy/config"
